# docs/swagger.json
@@ -184,7 +184,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/v2.Proposal"
+                                "$ref": "#/definitions/v3.Proposal"
                             }
                         }
                     }
@@ -420,7 +420,7 @@
                 }
             }
         },
-        "v2.Proposal": {
+        "v3.Proposal": {
             "type": "object",
             "properties": {
                 "access_policies": {
